--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
   <title>Stoixima Insider — Προβλέψεις</title>
   <style>
     *{margin:0;padding:0;box-sizing:border-box;font-family:Arial}
