--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ input, select{width:100%;padding:10px;margin-top:10px;border:1px solid #555;bord
         let statusHTML = `<div class="status ${m.status}">STATUS: ${m.status.toUpperCase()}</div>`;
 
         let tipSection = m.locked==='locked'
-          ? `<div class="vip-lock" onclick="location.href='https://www.buymeacoffee.com/?via=Sotirisdimp'">
+          ? `<div class="vip-lock" onclick="location.href='buymeacoffee.com/sotirisdimp'">
                <span>🔒</span> Αγοράστε πρόσβαση €5
              </div>`
           : `<div class="line">Σημείο: <b>${m.tip}</b> @ ${m.odds}</div>`;
